KIX2018-5750 fixed z-index

--- a/src/frontend-applications/agent-portal/modules/base-components/webapp/components/object-dialog/style.less
+++ b/src/frontend-applications/agent-portal/modules/base-components/webapp/components/object-dialog/style.less
@@ -23,6 +23,7 @@
     padding: 0.5rem 1rem;
     box-shadow: 0px 2px 4px #00000029;
     background-color: @secondary-3;
+    z-index: 15;
 
     .dialog-loading-text {
         align-self: center;
